force-app/main/default/objects/Intervalle_temps_sous_tache__c/Intervalle_temps_sous_tache__c.object-meta.xml
<CustomObject>
    <label>Intervalle temps sous tache</label>
    <nameField>
        <displayFormat>FDT-ST-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intervalle temps sous taches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>