force-app/main/default/objects/Intervalle_temps_sous_tache__c/fields/Date_de_debut__c.field-meta.xml
<CustomField>
    <fullName>Date_de_debut__c</fullName>
    <label>Date de debut</label>
    <type>Date</type>
</CustomField>