force-app/main/default/objects/Intervalle_temps_sous_tache__c/fields/Periode__c.field-meta.xml
<CustomField>
    <fullName>Periode__c</fullName>
    <formula>&quot;Semaine du : &quot; &amp; 
LPAD(TEXT(DAY(Date_de_debut__c)), 2, &quot;0&quot;) &amp; &quot;/&quot; &amp; 
LPAD(TEXT(MONTH(Date_de_debut__c)), 2, &quot;0&quot;) &amp; &quot;/&quot; &amp; 
TEXT(YEAR(Date_de_debut__c)) &amp; 
&quot; au &quot; &amp; 
LPAD(TEXT(DAY(Date_de_fin__c)), 2, &quot;0&quot;) &amp; &quot;/&quot; &amp; 
LPAD(TEXT(MONTH(Date_de_fin__c)), 2, &quot;0&quot;) &amp; &quot;/&quot; &amp; 
TEXT(YEAR(Date_de_fin__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Période</label>
    <type>Text</type>
</CustomField>