force-app/main/default/objects/Intervalle_temps_sous_tache__c/fields/Sous_tache__c.field-meta.xml
<CustomField>
    <fullName>Sous_tache__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sous tache</label>
    <referenceTo>Sous_tache__c</referenceTo>
    <relationshipLabel>Intervalle temps sous taches</relationshipLabel>
    <relationshipName>Intervalle_temps_sous_taches</relationshipName>
    <type>Lookup</type>
</CustomField>