force-app/main/default/objects/Intervalle_temps_sous_tache__c/fields/Total_Heures__c.field-meta.xml
<CustomField>
    <fullName>Total_Heures__c</fullName>
    <label>Total Heures</label>
    <summarizedField>Saisie_de_temps_sous_tache__c.Heures__c</summarizedField>
    <summaryForeignKey>Saisie_de_temps_sous_tache__c.Intervalle_temps_sous_tache__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>